# q

./: .dir-locals.el  CMakeLists.txt  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  cmake.yml
cmake/: FindVerilator.cmake  venv.cmake
libv/: CMakeLists.txt~  delay_pipe.sv  delay_pipe.sv~  libv_pkg.vh
pd/: CMakeLists.txt~  rf.sv  rf.sv~  spsram.sv  spsram.sv~
pd/sim/: CMakeLists.txt  rf.sv  spsram.sv
rtl/: CMakeLists.txt  cfg_pkg.vh.in  q.sv  q_engs.sv  q_pkg.vh  qs.sv  qs.sv~  qs_banks.sv  qs_deq.sv  qs_enq.sv  qs_insts.vh  qs_insts.vh~  qs_insts_pkg.vh  qs_pkg.vh  qs_srt.sv  qs_srt_pkg.vh  qs_srt_stack.sv  qs_srt_ucode_decoder.sv  qs_srt_ucode_rom.sv  qs_stack.sv  qs_stack.sv~  qs_ucode_decoder.sv  qs_ucode_rom.sv  rtl.cmake
rtl/common/: cla.sv  cmp.sv  dec.sv  enc.sv  lzd.sv  macros.vh  mask.sv  mux.sv  muxe.sv  pri.sv  queue_cntrl.sv  queue_rf.sv  rf.sv  rr.sv  sel.sv  stack_cntrl.sv  unmacros.vh
rtl/dc/: dc.sv
rtl/eng/: CMakeLists.txt  eng.sv  eng_pipe.sv  eng_pipe_ca.sv  eng_pipe_fa.sv  eng_pipe_xa.sv  qs.s  ucode.yml
rtl/eng/ucode/: CMakeLists.txt  qs.s
rtl/stk/: stk.sv  stk_pipe.sv  stk_pipe_ad.sv  stk_pipe_ad_inv.sv  stk_pipe_al.sv  stk_pipe_al_init.sv  stk_pipe_lk.sv  stk_pipe_mem.sv  stk_pipe_wb.sv  stk_pipe_wrbk.sv  stk_pkg.vh
rtl/ucode/: CMakeLists.txt  qs.s
tb/: CMakeLists.txt  CMakeLists.txt~  cfg.h.in  cfg_common.h.in  driver.cc  log.cc  log.h  qs_cfg_pkg.vh.in~  random.cc  random.cc~  random.h  random.h~  rnd.h  sim.h  tb.cc  tb.cc~  tb.h  tb.h.in  tb.h.in~  tb.h~  tb.sv  tb_qs.sv  tb_qs.sv~  tb_qs_pkg.vh.in  tb_qs_pkg.vh.in~  tb_qs_regress.cc  tb_qs_smoke.cc  test.cc  test.h  test.h~  utility.h  vsupport.cc  vsupport.h  vsupport.h~
tb/sva/: dffen_sva.sv  mux_sva.sv  queue_cntrl_sva.sv  stack_cntrl_sva.sv  sva.cmake
tb/tb_stk/: .#CMakeLists.txt  CMakeLists.txt  binds.sv  cfg.h  cfg.h.in  cfg_pkg.vh.in  tb_stk.cc  tb_stk.h  tb_stk.sv  tb_stk_error.cc  tb_stk_error.h  tb_stk_invalidate.cc  tb_stk_invalidate.h  tb_stk_main.cc  tb_stk_main.h  tb_stk_smoke.cc  tb_stk_smoke.h
tech/: common_defs.vh  macros.vh  tech.cmake  unmacros.vh
tech/sim/: dff.sv  dffe.sv  dffen.sv  dffr.sv  dffre.sv  dffren.sv  generic_sram_1rw.sv  icg.sv
tech/sim/rams/: stk_pipe_al_ptr_sram.sv  stk_pipe_mem_data_sram.sv  stk_pipe_mem_head_sram.sv  stk_pipe_mem_next_sram.sv  stk_pipe_mem_prev_sram.sv  stk_pipe_mem_tail_sram.sv
tools/: CMakeLists.txt  cfg.py.in  qas.sh.in  ucc.sh.in
tools/qas/: __main__.py  asm_grammar.lark  grammar.lark  instructions.py
tools/qlib/: __init__.py  verilog.py
tools/ucc/: __main__.py
